--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,29 +5,30 @@ body {
 }
 
 /* HEADINGS */
-
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: white;
 }
-
 .header--secondary {
     color: white;
     font-weight: 300;
     font-size: 42px;
 }
-
 .header--sub-header {
     color: grey;
-    font-weight: normal;
     font-size: 21px;
 }
 
 /* LINKS */
-
 .link--cta {
     font-size: 16px;
     color: aquamarine;
 }
 
+/* LINKS */
+.footer--copyright {
+    color: white;
+    font-size: 21px;
+    text-align: right;
+}
